--- a/029-hib-locking/build.gradle
+++ b/029-hib-locking/build.gradle
@@ -17,5 +17,7 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+    testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+
 
 }
