--- a/031-swagger/build.gradle
+++ b/031-swagger/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
+jar.archiveName = "SwaggerTestApp.jar"
 group = 'com.demien'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -28,7 +29,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 
     compile group: 'io.swagger', name: 'swagger-jersey2-jaxrs', version: '1.5.16'
-
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
