--- a/034-ddd-simple-app/build.gradle
+++ b/034-ddd-simple-app/build.gradle
@@ -15,5 +15,6 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-beans', version: '5.0.0.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '5.0.0.RELEASE'
 
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.springframework', name: 'spring-test', version: '5.0.0.RELEASE'
 }
